# RealTimeComm

.github/workflows/: terraform.yml
chat-app/: AsynchroniuosHandling.md
chat-app/backend/: .env  Cargo.toml  Dockerfile  function_finder.sh  process.env
chat-app/backend/src/: main.rs  text.txt  web_socket_testing.md
chat-app/backend/src/components/: mod.rs
chat-app/backend/src/components/attributes/: attributes.rs  mod.rs
chat-app/backend/src/components/background_tasks/: workers.rs
chat-app/backend/src/components/encryption/: AES.rs  ChaCha20.rs  Encryption.md  Function.md  RSA.rs  mod.rs
chat-app/backend/src/components/endpoints/: api.rs  mod.rs
chat-app/backend/src/components/errors/: SqlError.rs
chat-app/backend/src/components/models/: Database.md  Traits.md  appmode.rs  chat_group.rs  entry_reactions.rs  messages.rs  mod.rs  model_mongo.rs  model_postgres.rs  model_users.rs  mongo_repo.rs  server_response.rs  stun.rs  user_profile.rs
chat-app/backend/src/components/servers/: http_server.rs  http_server.txt  mod.rs  routes.rs  signaling_serv.rs
chat-app/backend/src/components/services/: .env  Authentication.md  Enhancments.md  Errors.md  IssuesAndHandle.md  Multithreading.md  Theory.md  advserver.md  api.rs  chat_functionality.rs  cl1server.rs  clserver.md  clserver.rs  clserver.txt  clserver1.txt  clserver_entities.rs  database.rs  database.txt  database_test.rs  encryption.rs  mod.rs  modesswitch.rs  p2p.rs  user_operations.rs  webrtc.rs
chat-app/backend/src/components/stun/: stun.rs  stun_func.rs
chat-app/backend/src/components/sturn/: turn.rs
chat-app/backend/src/components/webrtc_service/: signaling.rs
chat-app/backend/src/dependencies/: p2pcom.rs
chat-app/backend/src/theory/: DataTypes.md  Error.md  Exporting.md  Networking.md  Optimization.md  Theory.md
chat-app/frontend/: Dockerfile  Electron.md  Packages.md  README.md  package-lock.json  package.json  webpack.config.js
docs/: README.md
infrastructure/: k8s.tf  main.tf  outputs.tf  tfplan  variables.tf
infrastructure/myjmeter/: Dockerfile-master  Dockerfile-slave  dockerimages.sh  jmeter_grafana_deploy.yaml  jmeter_grafana_svc.yaml  jmeter_master_deploy.yaml  jmeter_slaves_deploy.yaml  master_svc.yaml  tenant_export
monitoring/myjmeter/: Dockerfile-base  Dockerfile-reporter  jmeter-prometheus.yaml  jmeter_cluster_create.sh  jmeter_grafana_reporter.yaml  jmeter_master_configmap.yaml  jmeter_slaves_svc.yaml  (+2 more)
(+62 files in other folders)
